# persons-of-significant-control

./: .gitignore  README.md  app.py  build-lambda-layer.ps1  ingest_pcs_partitions.py  ingest_to_s3.py  lambda_function.py  requirements.txt  theory.txt
infra/: requirements-dev.txt  requirements.txt
infra/compute/: extract_from_api.py
infra/infra/: infra_stack.py
psc/: Cargo.toml
psc/src/: main.rs
scripts/: build-lamba-layer.sh  build-lambda-layer.sh  install_python.sh  test_lambda.py
